# smart-factory-intelligence

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: config.py  main.py  pyproject.toml
backend/agents/: demand.py  events.py  orchestrator.py  quality.py  supply_chain.py
backend/api/: dashboard.py  pipeline.py
backend/database/: connection.py  schema.sql  seed.py
backend/tools/: quality_tools.py  sales_tools.py  sap_mcp_tools.py  supply_tools.py  tracking.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/agent-hub/: agent-hub.tsx
frontend/src/components/chat/: agent-chat.tsx
frontend/src/components/dashboard/: charts.tsx  data-overview.tsx  kpi-cards.tsx  production-orders.tsx
frontend/src/components/pipeline/: pipeline-analysis.tsx
frontend/src/components/tools-panel/: connected-tools.tsx
frontend/src/lib/: api.ts
